<resources>
    <string name="app_name">Fragments_01</string>
    <string name="weight">Weight:</string>
    <string name="Weight_View">N/A</string>
    <string name="Set">set</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Set_Weight" />
    <string name="Set_Weight_Hint">Enter Weight</string>
</resources>